@@ -10,17 +10,19 @@ import static io.openems.edge.common.type.TypeUtils.orElse;
 import static io.openems.edge.common.type.TypeUtils.subtract;
 import static io.openems.edge.common.type.TypeUtils.sum;
 import static io.openems.edge.controller.ess.timeofusetariff.StateMachine.BALANCING;
-import static io.openems.edge.controller.ess.timeofusetariff.StateMachine.CHARGE;
 import static io.openems.edge.controller.ess.timeofusetariff.StateMachine.DELAY_DISCHARGE;
 import static io.openems.edge.controller.ess.timeofusetariff.TimeOfUseTariffController.PERIODS_PER_HOUR;
 import static io.openems.edge.controller.ess.timeofusetariff.optimizer.Simulator.EFFICIENCY_FACTOR;
 import static java.lang.Math.abs;
 import static java.lang.Math.max;
 import static java.lang.Math.min;
+import static java.lang.Math.round;
 import static java.time.format.DateTimeFormatter.ISO_INSTANT;
 import static java.util.Arrays.stream;
 import static java.util.stream.IntStream.concat;
 
+import java.time.Clock;
+import java.time.Duration;
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
@@ -36,6 +38,7 @@ import java.util.stream.Stream;
 
 import com.google.common.collect.Streams;
 import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
 
 import io.jenetics.Genotype;
 import io.jenetics.IntegerChromosome;
@@ -47,9 +50,14 @@ import io.openems.common.timedata.Resolution;
 import io.openems.common.types.ChannelAddress;
 import io.openems.common.utils.JsonUtils;
 import io.openems.edge.common.sum.Sum;
+import io.openems.edge.controller.api.Controller;
+import io.openems.edge.controller.ess.emergencycapacityreserve.ControllerEssEmergencyCapacityReserve;
+import io.openems.edge.controller.ess.limittotaldischarge.ControllerEssLimitTotalDischarge;
 import io.openems.edge.controller.ess.timeofusetariff.StateMachine;
 import io.openems.edge.controller.ess.timeofusetariff.jsonrpc.GetScheduleResponse;
+import io.openems.edge.ess.api.HybridEss;
 import io.openems.edge.ess.api.ManagedSymmetricEss;
+import io.openems.edge.ess.api.SymmetricEss;
 import io.openems.edge.ess.power.api.Phase;
 import io.openems.edge.ess.power.api.Pwr;
 import io.openems.edge.timedata.api.Timedata;
@@ -59,10 +67,17 @@ public final class Utils {
 	private Utils() {
 	}
 
-	private static final ChannelAddress SUM_PRODUCTION = new ChannelAddress("_sum", "ProductionActivePower");
-	private static final ChannelAddress SUM_UNMANAGED_CONSUMPTION = new ChannelAddress("_sum",
+	/** Keep some buffer to avoid Scheduling errors because of bad predictions. */
+	public static final float ESS_MAX_SOC = 90F;
+
+	protected static final ChannelAddress SUM_ESS_SOC = new ChannelAddress("_sum", "EssSoc");
+	protected static final ChannelAddress SUM_PRODUCTION = new ChannelAddress("_sum", "ProductionActivePower");
+	protected static final ChannelAddress SUM_UNMANAGED_CONSUMPTION = new ChannelAddress("_sum",
 			"UnmanagedConsumptionActivePower");
-	private static final ChannelAddress SUM_CONSUMPTION = new ChannelAddress("_sum", "ConsumptionActivePower");
+	protected static final ChannelAddress SUM_CONSUMPTION = new ChannelAddress("_sum", "ConsumptionActivePower");
+
+	protected static final long EXECUTION_LIMIT_SECONDS_BUFFER = 30;
+	protected static final long EXECUTION_LIMIT_SECONDS_MINIMUM = 60;
 
 	public record ScheduleData(Float quarterlyPrice, Integer stateMachine, Integer production, Integer consumption,
 			Integer soc) {
@@ -92,36 +107,27 @@ public final class Utils {
 		final var prices = context.timeOfUseTariff().getPrices();
 
 		// Ess information.
-		final var netEssCapacity = context.ess().getCapacity().getOrError();
-		final var soc = context.ess().getSoc().getOrError();
-
-		// Calculate available energy using "netCapacity" and "soc".
-		var currentAvailableEnergy = netEssCapacity /* [Wh] */ / 100 * soc;
-
-		final var reduceAbove = 10; // TODO make this configurable via Risk Level
-
-		// Calculate the net usable energy of the battery.
-		final var reduceAboveEnergy = netEssCapacity / 100 * reduceAbove;
-		final var limitEnergy = getLimitEnergy(context, netEssCapacity) + reduceAboveEnergy;
-		final var netUsableEnergy = max(0, netEssCapacity - limitEnergy);
-
-		// Calculate current usable energy [Wh] in the battery.
-		currentAvailableEnergy = max(0, currentAvailableEnergy - limitEnergy);
+		final var essTotalEnergy = context.ess().getCapacity().getOrError();
+		final var essMinSocEnergy = getEssMinSocEnergy(context, essTotalEnergy);
+		final var essMaxSocEnergy = round(ESS_MAX_SOC / 100F * essTotalEnergy);
+		final var essSoc = context.ess().getSoc().getOrError();
+		final var essSocEnergy = essTotalEnergy /* [Wh] */ / 100 * essSoc;
 
 		// Power Values for scheduling battery for individual periods.
-		// TODO store max ever charge/dischare power
+		// TODO store max ever charge/discharge power
 		var power = context.ess().getPower();
 		var dischargePower = max(5000 /* at least 5000 */, power.getMaxPower(context.ess(), Phase.ALL, Pwr.ACTIVE));
 		var chargePower = min(-5000 /* at least 5000 */, power.getMinPower(context.ess(), Phase.ALL, Pwr.ACTIVE));
 
-		var maxChargePowerFromGrid = context.maxChargePowerFromGrid();
-
 		return Params.create() //
 				.time(time) //
-				.essAvailableEnergy(currentAvailableEnergy) //
-				.essCapacity(netUsableEnergy) //
+				.essTotalEnergy(essTotalEnergy) //
+				.essMinSocEnergy(essMinSocEnergy) //
+				.essMaxSocEnergy(essMaxSocEnergy) //
+				.essInitialEnergy(essSocEnergy) //
 				.essMaxEnergyPerPeriod(toEnergy(max(dischargePower, abs(chargePower)))) //
-				.maxBuyFromGrid(toEnergy(maxChargePowerFromGrid)) //
+				.essMaxChargePerPeriod(toEnergy(context.essMaxChargePower())) //
+				.maxBuyFromGrid(toEnergy(context.maxChargePowerFromGrid())) //
 				.productions(stream(interpolateArray(predictionProduction)).map(v -> toEnergy(v)).toArray()) //
 				.consumptions(stream(interpolateArray(predictionConsumption)).map(v -> toEnergy(v)).toArray()) //
 				.prices(interpolateArray(prices.getValues())) //
@@ -140,22 +146,66 @@ public final class Utils {
 				.toArray(Integer[]::new);
 	}
 
-	/**
-	 * Returns the amount of energy that is not usable for scheduling.
-	 * 
-	 * @param context        the {@link Context}
-	 * @param netEssCapacity net capacity of the battery.
-	 * @return the amount of energy that is limited.
-	 */
-	private static int getLimitEnergy(Context context, int netEssCapacity) {
-		// Usable capacity based on minimum SoC from Limit total discharge and emergency
-		// reserve controllers.
-		var limitSoc = concat(//
-				context.ctrlLimitTotalDischarges().stream().mapToInt(ctrl -> ctrl.getMinSoc().orElse(0)), //
-				context.ctrlEmergencyCapacityReserves().stream().mapToInt(ctrl -> ctrl.getActualReserveSoc().orElse(0))) //
-				.max().orElse(0);
+	protected static boolean paramsAreValid(Params p) {
+		if (p.numberOfPeriods() == 0) {
+			// No periods are available
+			System.out.println("No periods are available");
+			return false;
+		}
+		if (Arrays.stream(p.productions()).allMatch(v -> v == 0) //
+				&& Arrays.stream(p.consumptions()).allMatch(v -> v == 0)) {
+			// Production and Consumption predictions are all zero
+			System.out.println("Production and Consumption predictions are all zero");
+			return false;
+		}
+		var pricesAreAllTheSame = true;
+		for (var i = 1; i < p.prices().length; i++) {
+			if (p.prices()[0] != p.prices()[i]) {
+				pricesAreAllTheSame = false;
+			}
+		}
+		if (pricesAreAllTheSame) {
+			// Prices are all the same
+			System.out.println("Prices are all the same");
+			return false;
+		}
 
-		return netEssCapacity /* [Wh] */ / 100 * limitSoc;
+		return true;
+	}
+
+	/**
+	 * Returns the amount of energy that is not available for scheduling because of
+	 * a configured Minimum-SoC.
+	 * 
+	 * @param context     the {@link Context}
+	 * @param essCapacity net {@link SymmetricEss.ChannelId#CAPACITY}
+	 * @return the value in [Wh]; always positive
+	 */
+	private static int getEssMinSocEnergy(Context context, int essCapacity) {
+		return essCapacity /* [Wh] */ / 100 //
+				* getEssMinSoc(//
+						context.ctrlLimitTotalDischarges(), //
+						context.ctrlEmergencyCapacityReserves());
+	}
+
+	/**
+	 * Returns the configured Minimum-SoC, or zero.
+	 * 
+	 * @param ctrlLimitTotalDischarges      the list of
+	 *                                      {@link ControllerEssLimitTotalDischarge}
+	 * @param ctrlEmergencyCapacityReserves the list of
+	 *                                      {@link ControllerEssEmergencyCapacityReserve}
+	 * @return the value in [%]
+	 */
+	public static int getEssMinSoc(List<ControllerEssLimitTotalDischarge> ctrlLimitTotalDischarges,
+			List<ControllerEssEmergencyCapacityReserve> ctrlEmergencyCapacityReserves) {
+		return max(0, // force positive
+				concat(//
+						ctrlLimitTotalDischarges.stream() //
+								.mapToInt(ctrl -> ctrl.getMinSoc().orElse(0)), //
+						ctrlEmergencyCapacityReserves.stream() //
+								.mapToInt(ctrl -> ctrl.getActualReserveSoc().orElse(0)) //
+				).max().orElse(0));
 	}
 
 	/**
@@ -225,24 +275,73 @@ public final class Utils {
 	}
 
 	/**
-	 * Calculates the ESS charge energy for one period in
-	 * {@link StateMachine#CHARGE} state.
+	 * Calculates the ESS Max-Charge energy for a period.
 	 * 
-	 * @param maxBuyFromGrid Max Buy-From-Grid Energy per Period [Wh]
-	 * @param consumption    Consumption prediction
-	 * @param production     Production prediction
-	 * @param essMaxCharge   the max ESS charge energy after constraints; always
-	 *                       negative
-	 * @return ESS charge energy
+	 * @param essMaxSocEnergy       ESS energy below a configured Maximium-SoC [Wh]
+	 * @param essMaxEnergyPerPeriod ESS Max Charge/Discharge Energy per Period [Wh]
+	 * @param essInitial            ESS Initially Available Energy (SoC in [Wh]) of
+	 *                              the given period
+	 * @return the negative value in [Wh]
 	 */
-	protected static int calculateStateChargeEnergy(int maxBuyFromGrid, int consumption, int production,
-			int essMaxCharge) {
-		return max(//
+	protected static int calculateEssMaxCharge(int essMaxSocEnergy, int essMaxEnergyPerPeriod, int essInitial) {
+		return -min(//
+				max(0, essMaxSocEnergy - max(0, essInitial)), // Remaining capacity
+				essMaxEnergyPerPeriod); // Max per Period
+	}
+
+	/**
+	 * Calculates the ESS Max-Discharge energy for a period.
+	 * 
+	 * @param essMinSocEnergy       ESS energy above a configured Minimum-SoC [Wh]
+	 * @param essMaxEnergyPerPeriod ESS Max Charge/Discharge Energy per Period [Wh]
+	 * @param essInitial            ESS Initially Available Energy (SoC in [Wh]) of
+	 *                              the given period
+	 * @return the value in [Wh]
+	 */
+	protected static int calculateEssMaxDischarge(int essMinSocEnergy, int essMaxEnergyPerPeriod, int essInitial) {
+		return min(//
+				essMaxEnergyPerPeriod, // Max per Period
+				max(0, max(0, essInitial) - essMinSocEnergy)); // Min-Soc
+	}
+
+	/**
+	 * Calculates the Charge/Discharge energy for a period in BALANCING mode.
+	 * 
+	 * @param essMaxCharge    the max charge energy
+	 * @param essMaxDischarge the max discharge neergy
+	 * @param production      the period production
+	 * @param consumption     the period consumption
+	 * @return the value in [Wh]
+	 */
+	protected static int calculateBalancingChargeDischarge(int essMaxCharge, int essMaxDischarge, int production,
+			int consumption) {
+		return min(max(consumption - production, essMaxCharge), essMaxDischarge);
+	}
+
+	/**
+	 * Calculates the ESS charge energy for one period in
+	 * {@link StateCategory#CHARGE} state.
+	 * 
+	 * @param essMaxChargePerPeriod ESS Max Charge Energy per Period in CHARGE State
+	 *                              [Wh], positive
+	 * @param maxBuyFromGrid        Max Buy-From-Grid Energy per Period [Wh],
+	 *                              positive
+	 * @param consumption           Consumption prediction
+	 * @param production            Production prediction
+	 * @param essMaxCharge          the max ESS charge energy after constraints
+	 *                              [Wh], negative
+	 * @return ESS charge energy (negative)
+	 */
+	protected static int calculateStateChargeEnergy(int essMaxChargePerPeriod, int maxBuyFromGrid, int consumption,
+			int production, int essMaxCharge) {
+		return max(max(//
 				min(//
 						/* max charge energy from grid */
 						-maxBuyFromGrid + consumption - production,
-						/* force positive */
-						1),
+						/* force charge with at least '1 W' to make a difference */
+						-1),
+				/* limit to Max Charge Energy per Period in CHARGE State */
+				-essMaxChargePerPeriod),
 				/* limit to max ESS charge energy */
 				essMaxCharge);
 	}
@@ -252,17 +351,25 @@ public final class Utils {
 	 * 
 	 * @param ess                    the {@link ManagedSymmetricEss}
 	 * @param sum                    the {@link Sum}
+	 * @param essMaxChargePower      ESS Max Charge Power in CHARGE State
 	 * @param maxChargePowerFromGrid the configured max charge from grid power
 	 * @return the set-point or null
 	 */
-	public static Integer calculateCharge100(ManagedSymmetricEss ess, Sum sum, int maxChargePowerFromGrid) {
+	public static Integer calculateCharge(ManagedSymmetricEss ess, Sum sum, int essMaxChargePower,
+			int maxChargePowerFromGrid) {
 		// Calculate 'real' grid-power (without current ESS charge/discharge)
 		var gridPower = sum(//
 				sum.getGridActivePower().get(), /* current buy-from/sell-to grid */
 				ess.getActivePower().get() /* current charge/discharge Ess */);
 
+		if (ess instanceof HybridEss h) {
+			// Apply essMaxChargePower on AC- and DC-side
+			essMaxChargePower -= max(orElse(subtract(ess.getActivePower().get(), h.getDcDischargePower().get()), 0), 0);
+		}
+
 		return min(0, // never positive, i.e. force discharge
-				subtract(gridPower, maxChargePowerFromGrid)); // apply maxChargePowerFromGrid
+				max(-essMaxChargePower, //
+						subtract(gridPower, maxChargePowerFromGrid))); // apply maxChargePowerFromGrid
 	}
 
 	/**
@@ -274,13 +381,15 @@ public final class Utils {
 	 * @param requestId   the JSON-RPC request-id
 	 * @param timedata    the{@link Timedata}
 	 * @param componentId the Component-ID
-	 * @param fromDate    the From-Date
-	 * @param now         the To-Date
+	 * @param now         the current {@link ZonedDateTime} (will get rounded down
+	 *                    to 15 minutes)
 	 * @return the {@link GetScheduleResponse}
 	 * @throws OpenemsNamedException on error
 	 */
 	public static GetScheduleResponse handleGetScheduleRequest(Optimizer optimizer, UUID requestId, Timedata timedata,
-			String componentId, ZonedDateTime fromDate, ZonedDateTime now) throws OpenemsNamedException {
+			String componentId, ZonedDateTime now) throws OpenemsNamedException {
+		now = roundZonedDateTimeDownToMinutes(now, 15);
+
 		if (optimizer == null) {
 			throw new OpenemsException("Has no Schedule");
 		}
@@ -293,32 +402,34 @@ public final class Utils {
 			throw new OpenemsException("Has no Params");
 		}
 
-		final var essUsableCapacity = params.essCapacity();
-
 		// Define channel addresses
 		final var channelQuarterlyPrices = new ChannelAddress(componentId, "QuarterlyPrices");
 		final var channelStateMachine = new ChannelAddress(componentId, "StateMachine");
-		final var channelPredictedProduction = new ChannelAddress(componentId, "PredictedProduction");
-		final var channelPredictedConsumption = new ChannelAddress(componentId, "PredictedConsumption");
-
-		// Collect channels in a set
-		final var channels = Set.of(channelQuarterlyPrices, channelStateMachine, channelPredictedProduction,
-				channelPredictedConsumption);
 
 		// Query historic data
-		final var queryResult = timedata.queryHistoricData(null, fromDate, now, channels,
+		final var fromDate = now.minusHours(3);
+		var queryResult = timedata.queryHistoricData(null, fromDate, now,
+				Set.of(channelQuarterlyPrices, channelStateMachine, SUM_PRODUCTION, SUM_CONSUMPTION, SUM_ESS_SOC),
 				new Resolution(15, ChronoUnit.MINUTES));
+		if (queryResult == null) {
+			queryResult = new TreeMap<>();
+		}
 
 		// Process past predictions
-		final var pastPredictions = queryResult.entrySet().stream()//
+		var pastPredictions = queryResult.entrySet().stream()//
 				.map(Entry::getValue) //
 				.map(d -> new ScheduleData(//
 						getAsOptionalFloat(d.get(channelQuarterlyPrices)).orElse(null), //
 						getAsOptionalInt(d.get(channelStateMachine)).orElse(null), //
-						getAsOptionalInt(d.get(channelPredictedProduction)).orElse(null), //
-						getAsOptionalInt(d.get(channelPredictedConsumption)).orElse(null), //
-						null)) //
-				.collect(Collectors.toList());
+						jsonIntToEnergy(d.get(SUM_PRODUCTION)), //
+						jsonIntToEnergy(d.get(SUM_CONSUMPTION)), //
+						getAsOptionalInt(d.get(SUM_ESS_SOC)).orElse(null))) //
+				.toList();
+		if (pastPredictions.isEmpty()) {
+			IntStream.range(0, 3 /* hours */ * 4 /* quarters */) //
+					.mapToObj(i -> new ScheduleData(null, null, null, null, null)) //
+					.toList();
+		}
 
 		// Process future predictions
 		final var futurePredictions = periods.stream()//
@@ -327,14 +438,13 @@ public final class Utils {
 						period.state().getValue(), //
 						period.production(), //
 						period.consumption(), //
-						(period.essInitial() * 100) / essUsableCapacity)) //
+						round((period.essInitial() * 100) / (float) params.essTotalEnergy()))) //
 				.collect(Collectors.toList());
 
 		// Concatenate past and future predictions
 		final var predictions = Stream.concat(//
-				pastPredictions.stream(), // Last 3 hours data.
-				futurePredictions.stream()) // Future data.
-				.limit(96) // Limits the total data to 24 hours.
+				pastPredictions.stream().limit(12), // Last 3 hours data.
+				futurePredictions.stream().limit(96)) // Future data.
 				.collect(Collectors.toList());
 
 		// Create schedule and return GetScheduleResponse
@@ -373,15 +483,17 @@ public final class Utils {
 	}
 
 	/**
-	 * Post-Process a state of a Period, i.e. replace with 'better' state with the
-	 * same behaviour.
+	 * Post-Process a state of a Period during Simulation, i.e. replace with
+	 * 'better' state with the same behaviour.
 	 * 
 	 * <p>
 	 * NOTE: heavy computation is ok here, because this method is called only at the
 	 * end with the best Schedule.
 	 * 
 	 * @param p                        the {@link Params}
-	 * @param essInitial               the initial ESS energy in this period
+	 * @param essChargeDischarge       the scheduled ESS charge/discharge energy for
+	 *                                 this period
+	 * @param essInitialEnergy         the initial ESS energy in this period
 	 * @param gridEssCharge            grid-buy energy that is used to charge the
 	 *                                 ESS
 	 * @param price                    the price in this period
@@ -390,39 +502,80 @@ public final class Utils {
 	 * @param state                    the initial state
 	 * @return the new state
 	 */
-	public static StateMachine postprocessPeriodState(Params p, int essInitial, int gridEssCharge, float price,
-			int balancingChargeDischarge, StateMachine state) {
-		var soc = essInitial * 100 / p.essCapacity();
+	public static StateMachine postprocessSimulatorState(Params p, int essChargeDischarge, int essInitialEnergy,
+			int gridEssCharge, float price, int balancingChargeDischarge, StateMachine state) {
 		return switch (state) {
-		case BALANCING -> BALANCING;
+		case BALANCING -> state;
 
 		case DELAY_DISCHARGE -> {
 			// DELAY_DISCHARGE,...
-			if (essInitial == 0) {
+			if (essInitialEnergy <= p.essMinSocEnergy()) {
+				// but battery is already empty (at Min-Soc)
 				yield BALANCING;
-			} else if (balancingChargeDischarge < 0) {
+			} else if (essChargeDischarge < 0 && gridEssCharge == 0) {
 				// but actually charging from PV -> could have been BALANCING
 				yield BALANCING;
 			} else if (p.maxPrice() - price < 0.001F) {
 				// but price is high
 				yield BALANCING;
 			}
-			yield DELAY_DISCHARGE;
+			yield state;
 		}
 
 		case CHARGE -> {
 			// CHARGE,...
-			if (gridEssCharge <= 0) {
+			if (essChargeDischarge <= 0 && gridEssCharge <= 0) {
 				// but actually charging from PV -> could have been BALANCING
 				yield BALANCING;
-			} else if (soc >= 90) {
-				// but battery was already > 90 % SoC -> too risky
+			} else if (essInitialEnergy > p.essMaxSocEnergy()) {
+				// but battery is above limit
 				yield DELAY_DISCHARGE;
 			} else if (p.maxPrice() / price < EFFICIENCY_FACTOR) {
 				// but price is high
 				yield DELAY_DISCHARGE;
 			}
-			yield CHARGE;
+			yield state;
+		}
+		};
+	}
+
+	/**
+	 * Post-Process a state during {@link Controller#run()}, i.e. replace with
+	 * 'better' state if appropriate.
+	 * 
+	 * <p>
+	 * NOTE: this can be useful, if live operation deviates from predicted
+	 * operation, e.g. because predictions were wrong.
+	 * 
+	 * @param minSoc the configured Minimum-SoC, or zero
+	 * @param soc    the current {@link SymmetricEss.ChannelId#SOC}
+	 * @param state  the initial state
+	 * @return the new state
+	 */
+	public static StateMachine postprocessRunState(int minSoc, Integer soc, StateMachine state) {
+		if (soc == null) {
+			return state;
+		}
+
+		return switch (state) {
+		case BALANCING -> state;
+
+		case DELAY_DISCHARGE -> {
+			// DELAY_DISCHARGE,...
+			if (soc <= minSoc) {
+				// but SoC is at Min-SoC -> could have been BALANCING
+				yield BALANCING;
+			}
+			yield state;
+		}
+
+		case CHARGE -> {
+			// CHARGE,...
+			if (soc > ESS_MAX_SOC) {
+				// but surpassed Max-SoC -> stop charge; no discharge
+				yield DELAY_DISCHARGE;
+			}
+			yield state;
 		}
 		};
 	}
@@ -458,6 +611,14 @@ public final class Utils {
 		return power / PERIODS_PER_HOUR;
 	}
 
+	private static Integer jsonIntToEnergy(JsonElement j) {
+		var i = getAsOptionalInt(j);
+		if (i.isPresent()) {
+			return toEnergy(i.get());
+		}
+		return null;
+	}
+
 	/**
 	 * Converts energy [Wh/15 min] to power [W].
 	 * 
@@ -466,5 +627,56 @@ public final class Utils {
 	 */
 	public static Integer toPower(Integer energy) {
 		return multiply(energy, PERIODS_PER_HOUR);
+	}
+
+	/**
+	 * Calculates the ExecutionLimitSeconds for the {@link Optimizer}.
+	 * 
+	 * @param clock a clock
+	 * @return execution limit in [s]
+	 */
+	public static long calculateExecutionLimitSeconds(Clock clock) {
+		var now = ZonedDateTime.now(clock);
+		var nextQuarter = roundZonedDateTimeDownToMinutes(now, 15).plusMinutes(15)
+				.minusSeconds(EXECUTION_LIMIT_SECONDS_BUFFER);
+		var duration = Duration.between(now, nextQuarter).getSeconds();
+		if (duration >= EXECUTION_LIMIT_SECONDS_MINIMUM) {
+			return duration;
+		}
+		// Otherwise add 15 more minutes
+		return Duration.between(now, nextQuarter.plusMinutes(15)).getSeconds();
+	}
+
+	/**
+	 * Prints the Schedule to System.out.
+	 * 
+	 * <p>
+	 * NOTE: The output format is suitable as input for "RunOptimizerFromLogApp".
+	 * This is useful to re-run a simulation.
+	 * 
+	 * @param params  the {@link Params}
+	 * @param periods the map of {@link Period}s
+	 */
+	protected static void logSchedule(Params params, TreeMap<ZonedDateTime, Period> periods) {
+		var b = new StringBuilder() //
+				.append("OPTIMIZER ") //
+				.append(params.toString(false)) //
+				.append("\n") //
+				.append("OPTIMIZER ") //
+				.append(Period.header()) //
+				.append("\n");
+		if (periods.values().isEmpty()) {
+			b //
+					.append("OPTIMIZER ") //
+					.append("-> EMPTY\n");
+		} else {
+			periods.values().stream() //
+					.map(Period::toString) //
+					.forEach(s -> b //
+							.append("OPTIMIZER ") //
+							.append(s) //
+							.append("\n"));
+		}
+		System.out.println(b.toString());
 	}
 }
